Add icons for team ACTs

--- a/misc/encounters/bloxer.html
+++ b/misc/encounters/bloxer.html
@@ -163,7 +163,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="ft-rival">Rival</h3>
+	<h3 id="ft-rival">{% include acticon chara="Susie" -%} Rival</h3>
 	<p>Available after Susie joins the party for real.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Susie became antagonistic!</d-text>
@@ -256,7 +256,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="dialogue-rival">Rival</h3>
+	<h3 id="dialogue-rival">{% include acticon chara="Susie" -%} Rival</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Bloxer</d-speaker>
 		<d-text>My momentum<span class="break"></span> is totally<span class="break"></span> blocked<span class="break"></span> up...</d-text>
