--- a/misc/encounters/dummy.html
+++ b/misc/encounters/dummy.html
@@ -857,7 +857,7 @@ god this page is messy as hell. feel free to clean it up
 </section>
 
 <section class="d-section" id="hugralsei">
-	<h2>Hug Ralsei</h2>
+	<h2>{% include acticon chara="Ralsei" -%} Hug Ralsei</h2>
 	<p class="note">Hugging Ralsei does not progress the tutorial.</p>
 
 	<d-box theme="battlemenu">
