--- a/misc/encounters/hathy.html
+++ b/misc/encounters/hathy.html
@@ -204,7 +204,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-xflatter">X-Flatter</h3>
+	<h3 id="ft-xflatter">{% include acticon chara="Ralsei" -%} X-Flatter</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>You ordered Ralsei to flatter all the enemies!</d-text>
 	</d-box>
@@ -227,7 +227,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-warning">Warning</h3>
+	<h3 id="ft-warning">{% include acticon chara="Ralsei" -%} Warning</h3>
 	<p>Available before Susie joins the party for real.</p>
 	<p></p>
 	<p class="note">Susie's attacks will miss from now on.</p>
@@ -246,7 +246,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-sflatter">S-Flatter</h3>
+	<h3 id="ft-sflatter">{% include acticon chara="Susie" -%} S-Flatter</h3>
 	<p>Available after Susie joins the party for real.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>You ordered Susie to flatter all the enemies!</d-text>
@@ -337,7 +337,7 @@ toc:
 		<d-text><img src="{{ '/assets/images/story/talkhathy/2.gif' | relative_url }}" alt="A single red heart pulsing slightly"></d-text>
 	</d-box>
 
-	<h3 id="dialogue-xflatter">X-Flatter</h3>
+	<h3 id="dialogue-xflatter">{% include acticon chara="Ralsei" -%} X-Flatter</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Hathy</d-speaker>
 		<d-text><img src="{{ '/assets/images/story/talkhathy/3.gif' | relative_url }}" alt="A trio of red hearts pulsing slightly"></d-text>
