--- a/misc/encounters/jevil.html
+++ b/misc/encounters/jevil.html
@@ -450,7 +450,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-hypnosis">Hypnosis</h3>
+	<h3 id="ft-hypnosis">{% include acticon chara="Susie" -%} {% include acticon chara="Ralsei" -%} Hypnosis</h3>
 	<h4>Description</h4>
 	<d-box theme="battledesc">
 		<d-text>Induce TIRED</d-text>
