--- a/misc/encounters/king.html
+++ b/misc/encounters/king.html
@@ -446,7 +446,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-talk-susie">Talk (with Susie)</h3>
+	<h3 id="ft-talk-susie">{% include acticon chara="Susie" -%} Talk</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Susie tried to reason with the King...</d-text>
 	</d-box>
@@ -486,7 +486,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-redbuster">Red Buster</h3>
+	<h3 id="ft-redbuster">{% include acticon chara="Susie" -%} Red Buster</h3>
 	<h4>Description</h4>
 	<d-box theme="battledesc">
 		<d-text>Red Damage</d-text>
@@ -501,7 +501,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-talk-ralsei">Talk (with Ralsei)</h3>
+	<h3 id="ft-talk-ralsei">{% include acticon chara="Ralsei" -%} Talk</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Ralsei tried to reason with the King...</d-text>
 	</d-box>
@@ -541,7 +541,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-dualheal">Dual Heal</h3>
+	<h3 id="ft-dualheal">{% include acticon chara="Ralsei" -%} Dual Heal</h3>
 	<h4>Description</h4>
 	<d-box theme="battledesc">
 		<d-text>Heals everyone</d-text>
