--- a/misc/encounters/ponman.html
+++ b/misc/encounters/ponman.html
@@ -146,7 +146,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="ft-lullaby">Lullaby</h3>
+	<h3 id="ft-lullaby">{% include acticon chara="Ralsei" -%} Lullaby</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Ralsei sang a soft and entrancing lullaby!</d-text>
 	</d-box>
@@ -168,7 +168,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="ft-warning">Warning</h3>
+	<h3 id="ft-warning">{% include acticon chara="Ralsei" -%} Warning</h3>
 	<p>Available before Susie joins the party for real.</p>
 	<p></p>
 	<p class="note">Susie's attacks will miss from now on.</p>
