--- a/misc/encounters/rabbick.html
+++ b/misc/encounters/rabbick.html
@@ -146,7 +146,7 @@ encounters 16/17/24/32; 24 is unused
 
 	<hr>
 
-	<h3 id="ft-blowon">Blow On / BreathAll</h3>
+	<h3 id="ft-blowon">Blow On / {% include acticon chara="Ralsei" -%} BreathAll</h3>
 	<h4>Upon usage</h4>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Press [CONFIRM] repeatedly to blow air!</d-text>
@@ -163,7 +163,7 @@ encounters 16/17/24/32; 24 is unused
 	</d-box>
 	<p class="note">Rabbick is instantly spared.</p>
 
-	<h5>If using BreathAll</h5>
+	<h5>If using {% include acticon chara="Ralsei" -%} BreathAll</h5>
 	<d-box theme="battlemenu">
 		<d-text asterisk>The bunnies were blown away!</d-text>
 	</d-box>
@@ -171,7 +171,7 @@ encounters 16/17/24/32; 24 is unused
 
 	<hr>
 
-	<h3 id="ft-warning">Warning</h3>
+	<h3 id="ft-warning">{% include acticon chara="Ralsei" -%} Warning</h3>
 	<p>Intended to be available when Susie is in the party, before joining the party for real. Unused as Susie has already left the party by the time Rabbicks are encountered.</p>
 	<p></p>
 	<p class="note">Susie's attacks will miss from now on.</p>
