--- a/misc/encounters/rudinn.html
+++ b/misc/encounters/rudinn.html
@@ -220,7 +220,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-warning">Warning</h3>
+	<h3 id="ft-warning">{% include acticon chara="Ralsei" -%} Warning</h3>
 	<p>Available before Susie joins the party for real.</p>
 	<p></p>
 	<p class="note">Susie's attacks will miss from now on.</p>
