Ponman encounter: Standardize "Susie in party" headings
Why did I use team...

--- a/misc/encounters/ponman.html
+++ b/misc/encounters/ponman.html
@@ -152,13 +152,13 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	</d-box>
 	<p class="note">Ralsei sings to the enemies.</p>
 	<hr class="hr2">
-	<h4>If Susie is on the team</h4>
+	<h4>If Susie is in the party</h4>
 	<d-box theme="battlemenu">
 		<d-text asterisk>PONMAN fell asleep!</d-text>
 		<d-text asterisk>SUSIE fell asleep!</d-text>
 		<d-text asterisk>The enemies became TIRED!</d-text>
 	</d-box>
-	<h4>If Susie is not on the team</h4>
+	<h4>If Susie is not in the party</h4>
 	<d-box theme="battlemenu">
 		<d-text asterisk>PONMAN fell asleep!</d-text>
 		<d-text asterisk>The enemies became TIRED!</d-text>
