Ponman encounter: Clean up
- Remove stray </p> tag
- Remove only-child subheading

--- a/misc/encounters/ponman.html
+++ b/misc/encounters/ponman.html
@@ -28,10 +28,6 @@ toc:
       -
         id: encounter
         name: Initial encounter
-        subheadings:
-          -
-            id: encounter-ponmen
-            name: With 1 or 2 other Ponmen
       -
         id: ft-standard
         name: Standard
@@ -75,7 +71,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<h2>Flavor text</h2>
 
 	<h3 id="encounter">Initial encounter</h3>
-	<h4 id="encounter-ponmen">With 1 or 2 other Ponmen</h4>
+	<p>Appears with 1 or 2 other Ponmen.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Ponman drew near!</d-text>
 	</d-box>
@@ -107,7 +103,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	</d-box>
 
 	<h4>Unused "sleepy" variant</h4>
-	<p>Intended for when the "Lullaby" act was used on another Ponman in the encounter, making this one <span class="blue">Tired</span>. (Unused because it got assigned to the wrong variable.)</p> <!-- global.msg instead of global.battlemsg, if you were wondering --></p>
+	<p>Intended for when the "Lullaby" act was used on another Ponman in the encounter, making this one <span class="blue">Tired</span>. (Unused because it got assigned to the wrong variable.)</p> <!-- global.msg instead of global.battlemsg, if you were wondering -->
 	<d-box theme="battlemenu">
 		<d-text asterisk>The enemies became SLEEPY from Ralsei's lullaby!</d-text>
 	</d-box>
