Document recruit profiles

--- a/misc/index.html
+++ b/misc/index.html
@@ -41,6 +41,7 @@ toc:
 
 	<ul>
 		<li><a href="{{ '/misc/savepoints' | relative_url }}">Save points</a> - Narration accompanying save points</li>
+		<li><a href="{{ '/misc/recruits' | relative_url }}">Recruits</a> - Character profiles</li>
 		<!-- <li><a href="{{ '/misc/powermenu' | relative_url }}">POWER menu</a> - Levels and stats</li> -->
 		<!-- TODO: Other menus...? -->
 	</ul>
