Jevil encounter: Add ShadowCrystal get msg

--- a/misc/encounters/jevil.html
+++ b/misc/encounters/jevil.html
@@ -720,7 +720,11 @@ toc:
 
 	<hr class="hr2">
 
-	<p class="note">Jevil transforms into the Devilsknife, accompanied by the voice line "METAMORPHOSIS!", and disappears. You obtain equipment for winning the fight, accompanied by Jevil's laughter.</p>
+	<p class="note">Jevil transforms into the Devilsknife, accompanied by the voice line "METAMORPHOSIS!", and disappears. The following line is accompanied by Jevil's laughter.</p>
+
+	<d-box theme="dark">
+		<d-text asterisk>(You got ShadowCrystal.)</d-text>
+	</d-box>
 
 	<hr class="hr2">
 
