--- a/locations/lightworld/index.html
+++ b/locations/lightworld/index.html
@@ -76,6 +76,9 @@ items:
       -
         url: unusedclass
         name: Unused classroom
+      -
+        url: hallways
+        name: Hallways
 ---
 {% for section in page.items -%}
 <section class="d-section" id="{{ section.url }}">
