Document C.Round, Jigsawry encounters

--- a/misc/encounters/index.html
+++ b/misc/encounters/index.html
@@ -30,7 +30,12 @@ items:
           -
             url: hathy
             name: Hathy
-          # also c. round, jigsawry
+          -
+            url: cround
+            name: C. Round
+          -
+            url: jigsawry
+            name: Jigsawry
       -
         name: Great Board
         sublist:
