Fix Clover Manual usage limit
Apparently it can be used multiple times, not just once...? I'll take the wiki's word for this, I'm not that good at analyzing the with(obj) statements

--- a/misc/darkitems.html
+++ b/misc/darkitems.html
@@ -564,7 +564,7 @@ toc:
 	<d-box theme="battlemenu">
 		<d-text asterisk>Clover became sentimental!</d-text>
 	</d-box>
-	<p class="note">On the first use only, Clover gains 50% <span class="yellow">Mercy</span>.</p>
+	<p class="note">Clover gains 50% <span class="yellow">Mercy</span>.</p>
 
 	<hr>
 
