Rudinn/Hathy: Add Manual link/usage text

--- a/misc/encounters/hathy.html
+++ b/misc/encounters/hathy.html
@@ -272,7 +272,7 @@ toc:
 	
 	<hr>
 
-	<h3 id="ft-manual">Using the Manual</h3>
+	<h3 id="ft-manual">Using the <a href="{{ '/misc/darkitems#manual' | relative_url }}">Manual</a></h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>[Character] read the MANUAL!</d-text>
 	</d-box>
