Rabbick encounter: Remove stray </p>

--- a/misc/encounters/rabbick.html
+++ b/misc/encounters/rabbick.html
@@ -131,7 +131,7 @@ encounters 16/17/24/32; 24 is unused
 	<hr>
 
 	<h3 id="ft-spareable">Spareable</h3>
-	<p>Unused. (Got assigned to the wrong variable.)</p> <!-- global.msg instead of global.battlemsg, if you were wondering --></p>
+	<p>Unused. (Got assigned to the wrong variable.)</p> <!-- global.msg instead of global.battlemsg, if you were wondering -->
 	<d-box theme="battlemenu">
 		<d-text asterisk>Rabbick is now nice and clean.</d-text>
 	</d-box>
