Document Clover Dojo encounter

--- a/misc/encounters/clover.html
+++ b/misc/encounters/clover.html
@@ -71,7 +71,7 @@ toc:
         name: Spareable
       -
         id: ft-betray
-        name: Attacked after 100% Mercy
+        name: '"Betray"'
       -
         name: ACTs
         subheadings:
@@ -240,7 +240,8 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="ft-betray">Attacked after 100% <span class="yellow">Mercy</span></h3>
+	<h3 id="ft-betray">"Betray"</h3>
+	<p>Unused. Possibly intended for if you attacked after Clover had gained 100% <span class="yellow">Mercy</span>.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Clover's harmony was shattered by violence.</d-text>
 	</d-box>
