--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ hide_title: true
 		{%- comment %}
 		<li><span class="lightyellow">Dyslexia-friendly mode</span>: Switches to the <a href="https://antijingoist.itch.io/opendyslexic">OpenDyslexic font</a> for easier reading.</li>
 		{% endcomment %}
+		<li><span class="lightyellow">Dim colors</span>: Use slightly darker colors across the site, if the stark white-on-black strains your eyes.</li>
+		<li><span class="lightyellow">Animations</span>: Toggles animated images (replaced with static PNGs) and any text effects such as shaking text (replaced with italicized or otherwise statically-formatted text).</li>
 		<li><span class="lightyellow">Show all choices</span>: Displays results of all choices for easier searching.</li>
 	</ul>
 </section>
