Document both K. Round encounters

--- a/locations/cardkingdom/rouxlsshop.html
+++ b/locations/cardkingdom/rouxlsshop.html
@@ -115,7 +115,7 @@ toc:
 	<h2>Main screen</h2>
 
 	<h3 id="initial">Initial entrance</h3>
-	<h4>Before fighting <a href="{{ '/misc/encounters/kround' | relative_url }}">K. Round</a> for the second time</h4>
+	<h4>Before fighting <a href="{{ '/misc/encounters/kroundcardcastle' | relative_url }}">K. Round</a> for the second time</h4>
 	<d-sprite speaker="Rouxls" variant="shop" emotion="0" format="shop"></d-sprite>
 	<d-box theme="shopleft">
 		<d-speaker>Rouxls</d-speaker>
