--- a/misc/encounters/cround.html
+++ b/misc/encounters/cround.html
@@ -22,8 +22,11 @@ credits: >
 
 see_also:
   -
-    url: /misc/encounters/kround
-    name: K. Round encounter
+    url: /misc/encounters/kroundgreatboard
+    name: K. Round encounter - Great Board
+  -
+    url: /misc/encounters/kroundcardcastle
+    name: K. Round encounter - Card Castle
 
 toc:
   -
@@ -64,7 +67,7 @@ toc:
 	<hr>
 
 	<h3 id="ft-standard">Standard</h3>
-	<p>Unused, as the battle is scripted to end after the first turn, with Susie's attack knocking C. Round out of the encounter without commentary even if an ACT is not used.</p>
+	<p>Unused, as the battle is scripted to end after the first turn, with Susie's attack knocking C. Round out of the encounter without commentary even if no ACT (other than Check) is used.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>C.Round continues to act extremely violent.</d-text>
 	</d-box>
