--- a/misc/encounters/index.html
+++ b/misc/encounters/index.html
@@ -45,7 +45,9 @@ items:
           -
             url: ponman
             name: Ponman
-          # also k. round
+          -
+            url: kroundgreatboard
+            name: K. Round (first encounter)
       -
         name: Forest
         sublist:
@@ -67,6 +69,9 @@ items:
           -
             url: headhathy
             name: Head Hathy
+          -
+            url: kroundcardcastle
+            name: K. Round (second encounter)
           -
             url: king
             name: King
