Document all 3 Lancer encounters
- Added a disambiguation page at /lancer
- (on /badguys page) Trialling a version of the encounters page with ACTs given their own dedicated sections for joint flavor text/dialogue

--- a/misc/encounters/index.html
+++ b/misc/encounters/index.html
@@ -21,6 +21,9 @@ items:
         name: Castle Town
         sublist:
           -
+            url: lancervslightners
+            name: Lancer (first encounter, VS Kris and Susie)
+          -
             url: dummy
             name: Dummy
           # also unused ralsei fight
@@ -60,9 +63,15 @@ items:
           -
             url: clover
             name: Clover
+          -
+            url: badguys
+            name: Susie and Lancer
       -
         name: Card Castle
         sublist:
+          -
+            url: lancervssusie
+            name: Lancer (second encounter, VS Susie)
           -
             url: rudinnranger
             name: Rudinn Ranger
